<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailsRelativeLayout"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:id="@+id/detailsThumbnail"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/book"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/detailsTitle"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/detailsThumbnail"
        android:layout_marginTop="80dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/detailsAuthor"
        android:layout_below="@+id/detailsTitle"
        android:layout_toEndOf="@+id/detailsThumbnail"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailsListView"
        android:layout_below="@+id/detailsThumbnail"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/downloadButton"
        android:src="@android:drawable/ic_menu_save"
        android:layout_alignBottom="@+id/detailsThumbnail"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/formatSpinner"
        android:layout_alignBottom="@+id/downloadButton"
        android:layout_alignTop="@+id/downloadButton"
        android:layout_toStartOf="@+id/downloadButton" />

</RelativeLayout>