<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <WebView
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/dialog_web_view">

    </WebView>
</LinearLayout>