<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<item android:title="@string/sync_options"
    android:icon="@android:drawable/ic_dialog_info"
    app:showAsAction="always"
    android:id="@+id/sync_options_button"/>

</menu>


